hw04/skeleton/log.txt
mkdir classes; javac -classpath /opt/hadoop-2.7.2/share/hadoop/common/*:/opt/hadoop-2.7.2/share/hadoop/yarn/lib/*:/opt/hadoop-2.7.2/share/hadoop/mapreduce/lib/*:/opt/hadoop-2.7.2/share/hadoop/mapreduce/*:./  -d classes src/*.java; jar cvf PageRank.jar classes;echo classes/*.class; hadoop jar PageRank.jar PageRank
src/TrustMapper.java:15: error: cannot find symbol
    	context.getCounter(myCounter.SIZE).increment(1); // increment the number of nodes by 1
    	                   ^
  symbol:   variable myCounter
  location: class TrustMapper
src/TrustMapper.java:19: error: cannot find symbol
    		context.getCounter(myCounter.COUNTER).increment(inc); // add page rank of this node to counter
    		                   ^
  symbol:   variable myCounter
  location: class TrustMapper
Note: src/PageRank.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors
added manifest
adding: classes/(in = 0) (out= 0)(stored 0%)
adding: classes/NodeRecordWriter.class(in = 2130) (out= 1150)(deflated 46%)
adding: classes/LeftoverReducer.class(in = 1871) (out= 850)(deflated 54%)
adding: classes/NodeInputFormat.class(in = 823) (out= 362)(deflated 56%)
adding: classes/Node.class(in = 2745) (out= 1478)(deflated 46%)
adding: classes/NodeOrDouble.class(in = 1471) (out= 802)(deflated 45%)
adding: classes/LeftoverMapper.class(in = 1129) (out= 463)(deflated 58%)
adding: classes/NodeOutputFormat.class(in = 1566) (out= 685)(deflated 56%)
adding: classes/PageRank$myCounter.class(in = 896) (out= 509)(deflated 43%)
adding: classes/PageRank.class(in = 4041) (out= 2075)(deflated 48%)
adding: classes/NodeRecordReader.class(in = 3117) (out= 1540)(deflated 50%)
classes/LeftoverMapper.class classes/LeftoverReducer.class classes/Node.class classes/NodeInputFormat.class classes/NodeOrDouble.class classes/NodeOutputFormat.class classes/NodeRecordReader.class classes/NodeRecordWriter.class classes/PageRank$myCounter.class classes/PageRank.class
Exception in thread "main" java.lang.NoClassDefFoundError: TrustMapper
	at PageRank.getTrustJob(PageRank.java:107)
	at PageRank.main(PageRank.java:28)
	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:57)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.lang.reflect.Method.invoke(Method.java:606)
	at org.apache.hadoop.util.RunJar.run(RunJar.java:221)
	at org.apache.hadoop.util.RunJar.main(RunJar.java:136)
Caused by: java.lang.ClassNotFoundException: TrustMapper
	at java.net.URLClassLoader$1.run(URLClassLoader.java:366)
	at java.net.URLClassLoader$1.run(URLClassLoader.java:355)
	at java.security.AccessController.doPrivileged(Native Method)
	at java.net.URLClassLoader.findClass(URLClassLoader.java:354)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:425)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:358)
	... 8 more
make: *** [default] Error 1
